css/site.css
@font-face {
  src: url('../fonts/JosefinSans-Regular.ttf');
  src: url('../fonts/JosefinSans-Regular.ttf') format('truetype');
  font-family: 'Josie';
}

body {
  font-family: 'Josie', 'Open Sans', sans-serif !important;
  background: #fff;
  display: flex;
  align-items: center;
  min-height: 100vh;
}

a {
  text-decoration: none;
  cursor: pointer;
}

ul {
  list-style-type: none;
  padding: 0;
}

.gold-line {
  border: 2px solid #c5b358;
  margin: 0 auto;
  margin-top: -25px;
}

.main-card {
  width: 90%;
  min-height: 90vh;
  animation: peekaboo 0.8s linear;
  margin: 30px auto;
  display: flex;
  box-shadow: 0 0.625rem 2.5rem 0 rgba(198, 203, 222, 0.45);
}

@keyframes peekaboo {
  0% {
    transform: scale(0.01);
    opacity: 0.1;
  }

  50% {
    transform: scale(0.5);
    opacity: 0.5;
  }

  100% {
    transform: scale(1);
    opacity: 1;
  }
}

.main-card-nav {
  width: 20%;
  padding: 15px;
  text-align: left;
  background: #ffffff;
  display: flex;
  flex-wrap: wrap;
}

.main-card-nav li a,
.main-card-sub-list li a {
  color: #313638 !important;
  opacity: 0.7;
  z-index: 4;
}

.main-card-nav li a:hover,
.main-card-sub-list li a:hover {
  opacity: 1;
}

.main-card-nav img {
  width: 95px;
  height: 60px;
}

.main-card-nav-list {
  text-align: center;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
}

.main-card-nav-item,
.main-card-sub-list-item {
  width: 100%;
  text-align: center;
  font-size: 20px;
  margin: 20px 0;
}

.portfolio-link {
  position: relative;
}

.portfolio-list-item {
  position: relative;
}

.active-link {
  opacity: 1 !important;
}

.main-card-sub-list {
  margin-top: 10px;
  text-align: center;
  width: 80%;
  display: none;
  flex-wrap: wrap;
  margin-left: auto;
}

.shown {
  display: flex;
  z-index: 5;
}

.main-card-sub-list-item {
  margin: 10px 0;
  font-size: 16px;
}

.page-links {
  width: 100%;
  display: flex;
  justify-content: space-evenly;
}

.page-link {
  color: #c5b358 !important;
  transition: all 0.2s ease-in-out;
}

.page-link:hover {
  transform: scale(1.2);
  transition: all 0.2s ease-in-out;
}

.gold-btn {
  background: #c5b358;
  border-radius: 5px;
  padding: 15px 10px;
  font-size: 20px;
  width: fit-content;
  height: fit-content;
  transition: all 0.2s linear;
}

.gold-btn:hover {
  transition: all 0.2s linear;
  transform: scale(1.1);
}
.resume-btn {
  color: #ffffff !important;
  display: block;
  margin: 20px auto 10px;
}

.main-card-info {
  width: 80%;
  background: #313638;
  color: #ffffff;
}

.main-card-info ,
.main-card-nav
{
  max-height: 90vh;
    overflow-y: auto;
}

.main-card-info-item {
  display: none;
  position: relative;
}

.active-tab {
  display: block;
  height: 100%;
  box-sizing: border-box;
}

.about {
  padding: 20px;
  position: relative;
}

.about h1 {
  text-align: center;
  font-size: 60px;
  margin-bottom: 150px;
}

.about h4 {
  text-align: center;
  width: calc(100% - 40px);
  font-size: 30px;
  position: absolute;
  top: 170px;
  left: 0;
  right: 0;
  margin: 0 auto;
}

.about h4 > span {
  color: #c5b358;
}

.about .stop-showcase-btn {
  position: absolute;
  top: 220px;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: fit-content;
  color: #c5b358;
}

.about p {
  text-align: left;
  font-size: 20px;
  line-height: 28px;
}

.main-card-info-header {
  font-size: 35px;
}

.portfolio {
  padding: 20px;
  text-align: center;
}

.portfolio hr {
  width: 150px;
}

.portfolio a {
  display: block;
  width: fit-content;
  margin: 30px auto 10px;
  color: #c5b358 !important;
  font-size: 20px;
}

.portfolio a:hover,
.project-image-info a.portfolio-project-return-link:hover {
  text-decoration: underline;
}

.portfolio a:last-of-type {
  margin-bottom: 40px;
}
.project-image-section {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 15px 15px 0;
}

.project-image-section-name,
.project-image-section-item {
  width: calc(50% - 2.5px);
  max-height: 300px;
}

.project-image-section-name {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  position: relative;
}

.project-image-section-name h3 {
  width: 100%;
  text-align: center;
}
.project-image-section-name hr {
  width: 80px;
}

.project-image-section-item {
  margin-bottom: 5px;
}
.project-image-section-item img {
  height: 100%;
  width: 100%;
}

.project-image-info {
  padding: 15px;
  margin-bottom: 30px;
}

.project-image-info p {
  font-size: 20px;
  line-height: 120%;
  padding-top: 5px;
  display: flex;
  align-items: center;
}

.project-image-info a {
  color: #313638;
}

.project-image-info a.gold-btn {
  right: 15px;
  bottom: 10px;
  float: right;
}

.project-image-info a.portfolio-project-return-link{
    color: #c5b358;
    font-size: 20px;
    position: relative;
    bottom: -15px;
}

.skills {
  padding: 20px;
}

.skills h1 {
  text-align: center;
}

.skills hr {
  width: 50px;
}

.skill-section {
  width: 90%;
  padding: 60px 10px 10px;
  margin: 30px auto;
  border: 1px solid #c5b358;
  border-radius: 5px;
  position: relative;
}

.skill-section h3 {
  position: absolute;
  top: -20px;
  left: 0;
  background: #c5b358;
  width: fit-content;
  padding: 10px;
  color: #313638;
  font-size: 20px;
}

.skill-section-skills {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}
.skill-section-skills span {
  padding: 5px;
  background: #ffffff;
  color: #313638;
  margin: 5px;
  border-radius: 2px;
  font-size: 16px;
}

.contact {
  padding: 20px;
  text-align: center;
  font-size: 20px;
}

.contact hr {
  width: 80px;
}
.contact-card {
  position: relative;
  height: 100px;
  width: 350px;
  background: #fff;
  margin: 40px auto 10px;
}

.contact-card i {
  position: absolute;
  top: 5px;
  left: 10px;
  color: #c5b358;
}

.contact-card p {
  position: absolute;
  bottom: 5px;
  right: 10px;
  margin: 0;
  color: #313638;
}

.site-disclaimer {
  position: fixed;
  bottom: -10px;
  left: 0;
  color: #313638;
  text-align: center;
  width: 100%;
}

@media screen and (max-width: 1137px) {
  .gold-btn {
    font-size: 16px;
  }
}

@media screen and (max-width: 950px) {
  .main-card-nav {
    padding: 0;
    width: 25%;
  }
  .main-card {
    width: 98%;
  }
  .main-card-info {
    width: 75%;
  }
  .project-image-info p {
    font-size: 18px;
  }
}

@media screen and (max-width: 780px) {
  .main-card-info{
    max-height: 5000vh;
    height: auto;
  }
  .main-card-nav,
  .main-card-info{
    overflow-y: initial;

  }

  .main-card {
    flex-direction: column;
  }
  .main-card-nav img {
    order: 1;
  }
  .main-card-nav-list {
    order: 3;
    padding: 0 20px;
    justify-content: space-evenly;
  }
  .main-card-nav-item,
  .main-card-sub-list-item {
    width: fit-content;
    margin: 10px 20px;
  }

  .main-card-sub-list-item,
  .main-card-nav,
  .main-card-info,
  .project-image-section-name,
  .project-image-section-item,
  .contact-card {
    width: 100%;
  }

  .page-links {
    justify-content: center;
    order: 4;
    margin: 15px 0;
  }

  .page-link {
    margin: 0 10px;
  }

  .resume-btn {
    order: 2;
    margin-right: 20px;
    margin-top: 10px;
  }

  .dropped {
    margin-bottom: 170px;
  }

  .main-card-sub-list {
    width: fit-content;
    position: absolute;
    top: 10px;
    left: 0;
    background: #ffffff;
  }

  .project-image-section-name,
  .project-image-section-item {
    max-height: 400px;
  }

  .project-image-section-name {
    height: fit-content;
    margin-bottom: 40px;
  }

  .project-image-info {
    padding-top: 0;
    padding-bottom: 50px;
  }

  .project-image-section-name hr {
    top: 95px;
  }

  .about h1 {
    font-size: 40px;
    margin-bottom: 170px;
  }

  .about .stop-showcase-btn {
    top: 200px;
  }
  .about h4 {
    font-size: 25px;
    top: 150px;
  }

  .about p {
    font-size: 18px;
  }

  .project-image-info a.portfolio-project-return-link {
    font-size: 16px;
  }
}


@media screen and (max-width: 475px) {
  .main-card-nav-item,
  .main-card-sub-list-item {
    width: fit-content;
    margin: 10px 6px;
    font-size: 15px;
  }
  .skill-section h3{
    min-width: 100%;
    box-sizing: border-box;
    text-align: center;
  }
}

